--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+Version 1.2.3:
+ - add company_code parameter on add order
+
 Version 1.2.2:
  - change typo parameters from change payment status
 
