--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+Version 1.2.8:
+ - add order id on add order and update status order
+
 Version 1.2.7:
  - add support for warehouse(not fixed)  1. add Class For WareHouse  2. add method send on class WareHouse
  - change typo on README.md
