--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+Version 1.2.9:
+ - add update status for member registration
+
 Version 1.2.8:
  - add order id on add order and update status order
 
